--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "express": "^4.12.2",
     "jade": "^1.9.2"
+  },
+  "devDependencies": {
+    "bower": "^1.3.12"
   }
 }
