--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "toastr": "~2.1.0",
     "angular": "~1.3.14",
     "angular-resource": "~1.3.14",
-    "angular-route": "~1.3.14"
+    "angular-route": "~1.3.14",
+    "bootstrap": "~3.3.2"
   }
 }
