--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.12.0",
     "express": "^4.12.2",
-    "jade": "^1.9.2"
+    "jade": "^1.9.2",
+    "morgan": "^1.5.1",
+    "stylus": "^0.50.0"
   },
   "devDependencies": {
     "bower": "^1.3.12"
