--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.12.0",
     "express": "^4.12.2",
     "jade": "^1.9.2",
+    "mongoose": "^3.8.24",
     "morgan": "^1.5.1",
     "stylus": "^0.50.0"
   },
