--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.12.0",
+    "cookie-parser": "^1.3.4",
     "express": "^4.12.2",
+    "express-session": "^1.10.3",
     "jade": "^1.9.2",
     "mongoose": "^3.8.24",
     "morgan": "^1.5.1",
